# Pathological

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  fs.frag  runbench.sh  vcpkg.json
.github/workflows/: build.yml  format.yml
inc/: benchmark.h  camera.h  exporter.h  light.h  material.h  pathological.h  pathologicalobj.h  randgen.h  ray.h  renderable.h  renderthread.h  scene.h  sphere.h  triangle.h  vec3.h  window.h
inc/renderable/: plane.h  renderable.h  sphere.h  triangle.h
inc/util/: argparse.h  obj_loader.h  timer.h
src/: benchmark.cpp  camera.cpp  dielectric.cpp  lambertian.cpp  main.cpp  mirror.cpp  netpbm.cpp  pathological.cpp  randgen.cpp  renderthread.cpp  scene.cpp  window.cpp
src/material/: dielectric.cpp  lambertian.cpp  mirror.cpp
src/renderable/: lambertian.cpp
src/util/: argparse.cpp  benchmark.cpp  netpbm.cpp  obj_loader.cpp  window.cpp
tests/: obj_loader_test.cpp  vec3_test.cpp
